tyler's new and improved css added

--- a/style.css
+++ b/style.css
@@ -7,26 +7,62 @@ html {
 }
 
 body {
-    text-align: center;
     width: 100%;
     height: 100vh;
-    background: url("https://img.freepik.com/premium-photo/glowing-shimmering-stars-space-abstract-background_250994-1378.jpg")
+    background: url("https://img.freepik.com/premium-photo/glowing-shimmering-stars-space-abstract-background_250994-1378.jpg");
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
 }
 
 /* HP Bars / header */
-.hp-bars {
+.player-names {
     display: flex;
     justify-content: space-evenly;
+    color: white;
+    width: 100%;
+    border: 1px solid white;
+    z-index: 2;
+}
+
+.player-name, .enemy-name {
+    color: white;
+    font-family: sans-serif;
+    font-size: 2rem;
+    margin: 2rem auto 0;
+}
+
+.hp-bars {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hp-bars__player, .hp-bars__enemy {
+    width: 100%;
+    display: flex;
+}
+
+.player-container, .enemy-container {
+    width: 80%;
+}
+
+.total-hp {
+    margin: 5rem 3rem;
+    width: 13rem;
+    font-size: 2rem;
+    font-weight: bold;
+    color: red;
 }
 
 .ga-logo {
-    margin-top: 2rem;
+    margin: 2rem 4rem;
     width: 10rem;
 }
 
 .player-hp-container, .enemy-hp-container {
-    margin-top: 5rem;
-    width: 30%;
+    width: 100%;
+    margin-top: .5rem;
     height: 2.5rem;
     background-color: white;
     border-radius: 30px;
@@ -48,36 +84,60 @@ body {
     width: 30%;
 }
 
-.total-hp {
-    margin-top: 5rem;
-    font-size: 2rem;
-    font-weight: bold;
-    color: red;
-}
-
 
 /* Player Ship/Enemy Ship Styling */
+.characters {
+    display: flex;
+    justify-content: space-between;
+}
+
+.player {
+    background: url("https://i.imgur.com/CoK62ir.png")
+}
+
 .player-ship {
-    position: absolute;
-    width: 60rem;
+    width: 50rem;
     bottom: 20rem;
     left: 0;
     animation: shipIdlePlayer 3s infinite;
 }
 
-.enemy-ship {
+.player-laser {
     position: absolute;
+    z-index: -1;
+    width: 4rem;
+    left: 20rem;
+    bottom: 40rem;
+    animation: shootLaser .5s ease;
+}
+
+.enemy-ship {
     width: 50rem;
     bottom: 50rem;
     right: 0rem;
     animation: shipIdleEnemy 3s infinite;
 }
 
-/* Player move buttons */
-.player-moves {
-    margin-top: 105rem;
+/* Play Logs */
+.play-logs {
+    height: 8rem;
+    width: 40%;
+    margin: 0 auto 3rem;
+    border: 3px solid red;
+    background-color: white;
+    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
 }
 
+.play-logs__message {
+    font-size: 1.8rem;
+    font-family: sans-serif;
+}
+
+/* Player move buttons */
 .player-move-btn {
     width: 20rem;
     height: 10rem;
@@ -86,7 +146,8 @@ body {
     border: none;
     color: white;
     font-size: 3rem;
-    transition: .3s ease;
+    transition: .5s ease;
+    margin-bottom: 2rem;
 }
 
 .player-move-btn:hover {
@@ -95,7 +156,7 @@ body {
     border: 5px solid red;
     font-weight: bold;
     color: red;
-    transition: .3s ease;
+    transition: .5s ease;
 }
 
 @keyframes shipIdlePlayer {
@@ -106,4 +167,9 @@ body {
 @keyframes shipIdleEnemy {
     0%, 100% { transform: translateY(0); }
     50% { transform: translateY(20px); }
+}
+
+@keyframes shootLaser {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(1000px); }
 }
