--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 * {
     box-sizing: border-box;
-}
-
-html {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html {
     font-size: 10px;
-}
-
-body {
+  }
+  
+  body {
     width: 100%;
     height: 100vh;
     background: url("https://img.freepik.com/premium-photo/glowing-shimmering-stars-space-abstract-background_250994-1378.jpg");
@@ -14,115 +16,134 @@ body {
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-}
-
-/* HP Bars / header */
-.player-names {
+  }
+  
+  /* HP Bars / header */
+  .player-names {
     display: flex;
     justify-content: space-evenly;
     color: white;
     width: 100%;
     border: 1px solid white;
     z-index: 2;
-}
-
-.player-name, .enemy-name {
+  }
+  
+  .player-name,
+  .enemy-name {
     color: white;
     font-family: sans-serif;
     font-size: 2rem;
     margin: 2rem auto 0;
-}
-
-.hp-bars {
+  }
+  
+  .hp-bars {
     display: flex;
     justify-content: space-between;
-}
-
-.hp-bars__player, .hp-bars__enemy {
+  }
+  
+  .hp-bars__player,
+  .hp-bars__enemy {
     width: 100%;
     display: flex;
-}
-
-.player-container, .enemy-container {
+  }
+  
+  .player-container,
+  .enemy-container {
     width: 80%;
-}
-
-.total-hp {
+  }
+  
+  .total-hp {
     margin: 5rem 3rem;
     width: 13rem;
     font-size: 2rem;
     font-weight: bold;
     color: red;
-}
-
-.ga-logo {
+  }
+  
+  .ga-logo {
     margin: 2rem 4rem;
     width: 10rem;
-}
-
-.player-hp-container, .enemy-hp-container {
+  }
+  
+  .player-hp-container,
+  .enemy-hp-container {
     width: 100%;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
     height: 2.5rem;
     background-color: white;
     border-radius: 30px;
     border: 2px solid red;
-}
-
-.player-hp, .enemy-hp {
+  }
+  
+  .player-hp,
+  .enemy-hp {
     background-color: red;
     height: 100%;
     margin-bottom: 10rem;
     border-radius: 30px;
-}
-
-.player-hp {
+  }
+  
+  .player-hp {
     width: 60%;
-}
-
-.enemy-hp {
+  }
+  
+  .enemy-hp {
     width: 30%;
-}
-
-
-/* Player Ship/Enemy Ship Styling */
-.characters {
+  }
+  
+  /* Player Ship/Enemy Ship Styling */
+  .characters {
     display: flex;
     justify-content: space-between;
-}
-
-.player {
-    background: url("https://i.imgur.com/CoK62ir.png")
-}
-
-.player-ship {
-    width: 50rem;
-    bottom: 20rem;
+  }
+  
+  .player {
+    width: 40rem;
     left: 0;
     animation: shipIdlePlayer 3s infinite;
-}
-
-.player-laser {
+  }
+  
+  .player-ship {
     position: absolute;
-    z-index: -1;
-    width: 4rem;
-    left: 20rem;
-    bottom: 40rem;
-    animation: shootLaser .5s ease;
-}
+    width: 40rem;
+    left: 0;
+    bottom: 0;
+  }
 
-.enemy-ship {
-    width: 50rem;
-    bottom: 50rem;
+  .player-attack {
+    position: absolute;
+    width: 30rem;
+    left: 5rem;
+    bottom: 8.5rem;
+    z-index: -1;
+    animation: playerAttack 3s ease;
+  }
+
+  .enemy {
+    width: 40rem;
+    margin-bottom: 10rem;
     right: 0rem;
     animation: shipIdleEnemy 3s infinite;
-}
+  }
+  
+  .enemy-ship {
+    width: 40rem;
+  }
 
-/* Play Logs */
-.play-logs {
+  .garbage-attack {
+    position: absolute;
+    width: 10rem;
+    left: 5rem;
+    bottom: 8.5rem;
+    z-index: -1000;
+    animation: garbageAttack 12s ease;
+  }
+  
+  /* Play Logs */
+  .play-logs {
     height: 8rem;
     width: 40%;
-    margin: 0 auto 3rem;
+    margin: 0 auto;
     border: 3px solid red;
     background-color: white;
     color: red;
@@ -130,15 +151,15 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 20px;
-}
-
-.play-logs__message {
+  }
+  
+  .play-logs__message {
     font-size: 1.8rem;
     font-family: sans-serif;
-}
-
-/* Player move buttons */
-.player-move-btn {
+  }
+  
+  /* Player move buttons */
+  .player-move-btn {
     width: 20rem;
     height: 10rem;
     border-radius: 30px;
@@ -146,30 +167,82 @@ body {
     border: none;
     color: white;
     font-size: 3rem;
-    transition: .5s ease;
-    margin-bottom: 2rem;
-}
-
-.player-move-btn:hover {
+    transition: 0.5s ease;
+    margin-bottom: 3rem;
+  }
+  
+  .player-move-btn:hover {
     cursor: pointer;
     background-color: white;
     border: 5px solid red;
     font-weight: bold;
     color: red;
-    transition: .5s ease;
-}
-
-@keyframes shipIdlePlayer {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(-20px); }
+    transition: 0.5s ease;
   }
 
-@keyframes shipIdleEnemy {
-    0%, 100% { transform: translateY(0); }
-    50% { transform: translateY(20px); }
-}
+/* ADDED BY WILLY */
+@media screen and (max-width: 670px) {
+    .player-ship {
+      width: 25rem;
+      bottom: 20rem;
+      left: 0;
+      animation: shipIdlePlayer 3s infinite;
+    }
+  
+    .enemy-ship {
+      width: 25rem;
+      bottom: 50rem;
+      right: 0rem;
+      animation: shipIdleEnemy 3s infinite;
+    }
+  }
+  
+  
+  .level {
+    color: red;
+    position: absolute;
+    font-size: 5rem;
+    font-weight: bold;
+    top: 19%;
+    left: 50.5%;
+    transform: translate(-50%, -50%);
+  }
+  
+  @keyframes shipIdlePlayer {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+  
+  @keyframes shipIdleEnemy {
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(20px);
+    }
+  }
 
-@keyframes shootLaser {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(1000px); }
-}
+  @keyframes playerAttack {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(10000px);
+    }
+  }
+
+  @keyframes garbageAttack {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-10000px);
+    }
+  }
+  
