updated with will and bryces cosmetic changes and danny's additional js

--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@
     font-weight: bold;
     color: white;
     top: -22.10px;
-    left: 0; 
+    left: 0;
     /* transform: translate(-50%, -50%); */
-    display: inline-block; 
+    display: inline-block;
     position: relative;
     /* display added by will & bryce */
   }
@@ -71,43 +71,43 @@
     margin: 2rem 4rem;
     width: 10rem;
   }
-
+  
   /* Wills health bars */
   #player-health-bar {
-    width: 100%; 
-    height: 20px; 
-    appearance: none; 
-    border: 1px solid #ccc; 
+    width: 100%;
+    height: 20px;
+    appearance: none;
+    border: 1px solid #ccc;
   }
   
   #player-health-bar::-webkit-progress-bar {
-    background-color: #f2f2f2; 
+    background-color: #f2f2f2;
     width: 100%;
   }
   
   #player-health-bar::-webkit-progress-value {
-    background-color: limegreen; 
+    background-color: limegreen;
     width: 100%;
   }
-
+  
   #enemy-health-bar {
-    width: 100%; 
-    height: 20px; 
-    appearance: none; 
-    border: 1px solid #ccc; 
+    width: 100%;
+    height: 20px;
+    appearance: none;
+    border: 1px solid #ccc;
   }
   
   #enemy-health-bar::-webkit-progress-bar {
-    background-color: #f2f2f2; 
+    background-color: #f2f2f2;
     width: 100%;
   }
   
   #enemy-health-bar::-webkit-progress-value {
-    background-color: red; 
+    background-color: red;
     width: 100%;
   }
-
-   /* .player-hp-container,
+  
+  /* .player-hp-container,
   .enemy-hp-container {
     width: 100%;
     margin-top: 0.5rem;
@@ -116,7 +116,7 @@
     border-radius: 30px;
     border: 2px solid red;
   } */
-
+  
   /* .player-hp,
   .enemy-hp {
     background-color: red;
@@ -151,7 +151,7 @@
     left: 0;
     bottom: 0;
   }
-
+  
   .player-attack {
     position: absolute;
     width: 30rem;
@@ -160,7 +160,7 @@
     z-index: -1;
     animation: playerAttack 3s ease;
   }
-
+  
   .enemy {
     width: 40rem;
     margin-bottom: 10rem;
@@ -171,7 +171,7 @@
   .enemy-ship {
     width: 40rem;
   }
-
+  
   .garbage-attack {
     position: absolute;
     width: 10rem;
@@ -184,11 +184,12 @@
   /* Play Logs */
   .play-logs {
     height: 8rem;
-    width: 40%;
+    width: 50%;
     margin: 0 auto;
-    border: 3px solid red;
-    background-color: white;
-    color: red;
+    margin-top: 12rem;
+    /* border: 3px solid red; */
+    background-color: transparent;
+    color: lightgray;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -196,8 +197,11 @@
   }
   
   .play-logs__message {
-    font-size: 1.8rem;
-    font-family: sans-serif;
+    font-size: 3rem;
+    font-weight: bold;
+    font-family: 'Space Grotesk', sans-serif;
+    /* margin: 2rem; */
+    text-transform: uppercase;
   }
   
   /* Player move buttons */
@@ -205,25 +209,29 @@
     width: 20rem;
     height: 10rem;
     border-radius: 30px;
-    background-color: red;
+    background-color: darkslateblue;
+    font-family: 'Space Grotesk', sans-serif;
     border: none;
     color: white;
     font-size: 3rem;
     transition: 0.5s ease;
-    margin-bottom: 3rem;
+    margin-bottom: 19rem;
+    margin-left: .4rem;
+    /* margin: .1rem; */
   }
   
   .player-move-btn:hover {
     cursor: pointer;
-    background-color: white;
-    border: 5px solid red;
+    background-color: transparent;
+    border: 1px solid red;
     font-weight: bold;
     color: red;
     transition: 0.5s ease;
+    transform: scale(1.06);
   }
-
-/* ADDED BY WILLY */
-@media screen and (max-width: 670px) {
+  
+  /* ADDED BY WILLY */
+  @media screen and (max-width: 890px) { 
     .player-ship {
       width: 25rem;
       bottom: 20rem;
@@ -237,12 +245,18 @@
       right: 0rem;
       animation: shipIdleEnemy 3s infinite;
     }
+
+    /* body {
+        max-height: 780px
+    } */
   }
+
   
   .level {
     color: red;
     font-size: 5rem;
     font-weight: bold;
+  
     /* position: relative;
     font-weight: bold;
     display: inline-block;
@@ -250,44 +264,50 @@
     left: 50.5%;
     transform: translate(-50%, -50%); */
   }
-
+  
   .level-container {
     display: grid;
   }
   
   @keyframes shipIdlePlayer {
+  
     0%,
     100% {
       transform: translateY(0);
     }
+  
     50% {
       transform: translateY(-20px);
     }
   }
   
   @keyframes shipIdleEnemy {
+  
     0%,
     100% {
       transform: translateY(0);
     }
+  
     50% {
       transform: translateY(20px);
     }
   }
-
+  
   @keyframes playerAttack {
     0% {
       transform: translateX(0);
     }
+  
     100% {
       transform: translateX(10000px);
     }
   }
-
+  
   @keyframes garbageAttack {
     0% {
       transform: translateX(0);
     }
+  
     100% {
       transform: translateX(-10000px);
     }
