--- a/CSS/stylegame.css
+++ b/CSS/stylegame.css
@@ -35,17 +35,14 @@ body {
   border: 1px solid white;
   z-index: 2;
 }
-
 .hp-bars__player, .hp-bars__enemy {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-
 .player-container, .enemy-container {
   width: 90%;
 }
-
 .player-name,
 .enemy-name {
   color: white;
@@ -53,11 +50,9 @@ body {
   font-size: 2rem;
   margin: 2rem auto 0;
 }
-
 .level {
   width: 100%;
 }
-
 .hp-bars {
   display: flex;
   justify-content: space-evenly;
@@ -81,7 +76,6 @@ body {
   margin-top: 2rem;
   width: 10rem;
 } */
-
 .level {
   margin-top: 2rem;
   width: 20rem;
@@ -92,7 +86,6 @@ body {
   font-weight: bold;
   font-family: monospace;
 }
-
 /* Wills health bars */
 #player-health-bar, #enemy-health-bar {
   width: 100%;
@@ -100,30 +93,24 @@ body {
   appearance: none;
   border: 1px solid #ccc;
 }
-
 #player-health-bar::-webkit-progress-bar, #enemy-health-bar::-webkit-progress-bar {
   width: 100%;
 }
-
 #player-health-bar::-webkit-progress-value, #enemy-health-bar::-webkit-progress-value {
   width: 100%;
 }
-
 #player-health-bar::-webkit-progress-bar {
   background-color: #F2F2F2;
 }
 #player-health-bar::-webkit-progress-value {
   background-color: limegreen;
 }
-
 #enemy-health-bar::-webkit-progress-bar {
   background-color: #F2F2F2;
 }
-
 #enemy-health-bar::-webkit-progress-value {
   background-color: red;
 }
-
 /* Player Ship/Enemy Ship Styling */
 .characters {
   display: flex;
@@ -233,6 +220,44 @@ body {
   border: 2px solid rgb(103, 202, 77);
   color: rgb(103, 202, 77);
 }
+.game-over-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: rgb(209, 53, 48);
+  text-shadow: #FFF 1px 1px 2px;
+  font-size: 4rem;
+  z-index: 3000;
+}
+.game-over-btn {
+  width: 20rem;
+  height: 10rem;
+  border-radius: 30px;
+  font-family: 'Space Grotesk', sans-serif;
+  border: none;
+  color: white;
+  font-size: 3rem;
+  transition: 0.5s ease;
+  background-color: rgb(209, 53, 48);
+  margin-top: 3rem;
+}
+.game-over-btn:hover {
+  cursor: pointer;
+  background-color: transparent;
+  font-weight: bold;
+  transition: 0.5s ease;
+  transform: scale(1.06);
+}
+.game-over-btn:hover {
+  box-shadow: 0 0 30px rgb(209, 53, 48);
+  border: 2px solid rgb(209, 53, 48);
+  background-color: transparent;
+  color: rgb(209, 53, 48);
+}
 /* ADDED BY WILLY */
 @media screen and (max-width: 890px) {
   .player-ship {
@@ -244,11 +269,9 @@ body {
     left: 5rem;
     bottom: 12rem;
   }
-
   .enemy-ship {
     width: 25rem;
   }
-
   .garbage-attack {
     width: 7rem;
     left: 9rem;
